2007-03-22  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sound_handler.(cpp,h): rewrited mixer,
	It is decoded only so much samples how much to be located in 
	the handler buffer (required for stream sound)

2007-03-20  Vitaly Alexeev <tishka92@yahoo.com>
	
	* a lot of files: 
	added sound stream tag loaders & sound stream handler

2007-03-18  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sprite.cpp: fixed hitTest(),
	It was necessary to use get_world_matrix() to find screen coordinates

2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sprite.(cpp,h),
	* gameswf/gameswf_as_sprite.(cpp,h): added hitTest() method
	* gameswf/gameswf_as_classes/as_color.(cpp,h): added comments

2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf.h,
	* gameswf/gameswf_movie.h,
	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_as_classes/as_color.(cpp,h),
	* gameswf/win32/VC8/gameswf.vcproj:
	added the part of Color() Action Script class
	
2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/TODO: some bugs are fixed


2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sprite.(cpp,h): cleanup
	* base/tu_memdebug.h: cleanup

2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* a lot of files: gameswf_impl is divided into 4 parts:
	gameswf_impl,
	gameswf_sprite_def (sprite definition) ,
	gameswf_sprite (sprite instance) & 
	gameswf_as_sprite (sprite built-in ActionScript methods)

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_movie_def.(cpp,h),
	* gameswf/gameswf_mutex.h,
	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_root.cpp:
	The job on the runing create_library_movie() & 
	create_library_movie_inst in separate threads is finished.
	Now .swf files are loaded much more quickly. I am assured that
	there are a bugs. It is not terrible :-). We shall work & fix bugs
	* gameswf/gameswf_test_ogl.cpp: progress bar is switched off (useless now)
